# SmartNotifications

./: .gitignore  README.md  main.py  pyproject.toml
knowledge/: available_commands.md
llm/: client.py  conversation.py  prompts.py  tools.py
messaging/: messenger.py  telegram_messenger.py  test_send.py
utils/: config.py  helper.py  input.py
