[tool.poetry]
name = "smartnotifications"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4"
python-telegram-bot = "22.2"
requests = "2.32.4"
openai = "1.93.1"
click = "8.2.1"
prompt-toolkit = "3.0.51"
rich = "14.0.0"
pyperclip = "1.9.0"
tiktoken = "0.9.0"
markdown2 = "2.5.3"
portkey-ai = "1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
